--- a/app/templates/pages/index.html
+++ b/app/templates/pages/index.html
@@ -1,6 +1,8 @@
 {% extends 'layout/index.html' %}
 
-
+{% block title %}
+<title>Psb-hosting.pro - Панель управления – Хостинг VDS/VPS серверов </title>
+{% endblock %}
 
 {% block content %}
     <div class="main-content app-content mt-0">
