--- a/app/templates/pages/shop.html
+++ b/app/templates/pages/shop.html
@@ -1,4 +1,9 @@
 {% extends 'layout/index.html' %}
+
+{% block title %}
+    <title>psb-hosting.pro - Магазин услуг - VDS/VPS сервера для вашего бизнеса</title>
+{% endblock %}
+
 {% block content %}
     <!--app-content open-->
     <div class="main-content app-content mt-0" xmlns="http://www.w3.org/1999/html">
@@ -38,8 +43,8 @@
                                             </div>
                                             <div class="col-xl-7 col-lg-6 col-md-7 col-sm-6">
                                                 <div class="float-sm-end float-none my-1">
-                                                    <a href="cart.html" class="btn btn-primary me-2">Заказать индивидуальный сервер</a>
-                                                    <a href="javascript:void(0)" class="btn btn-primary">Связаться с Тех-поддержкой</a>
+                                                    <a href="#" class="btn btn-primary me-2">Заказать индивидуальный сервер</a>
+                                                    <a href="#" class="btn btn-primary">Связаться с Тех-поддержкой</a>
                                                 </div>
                                             </div>
                                         </div>
