--- a/app/templates/pages/cart/cart.html
+++ b/app/templates/pages/cart/cart.html
@@ -1,5 +1,9 @@
 {% extends 'layout/index.html' %}
 
+{% block title %}
+<title>psb-hosting.pro - Корзина покупок - VPS/VDS сервера для вашего бизнеса</title>
+{% endblock %}
+
 {% block content %}
     <div class="main-content app-content mt-0">
         <div class="side-app">
@@ -64,17 +68,6 @@
                                     </table>
                                 </div>
                             </div>
-                            <div class="card-footer">
-                                <div class="row">
-                                    <div class="col-md-6 col-sm-6">
-                                        <div class="input-group mb-1">
-                                            <input type="text" class="form-control" placeholder="Search ...">
-                                            <span class="input-group-text btn btn-primary">Apply Coupon</span>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 col-sm-6 text-end"><a href="javascript:void(0)" class="btn btn-default disabled btn-md">Update Cart</a></div>
-                                </div>
-                            </div>
                         </div>
                     </div>
                     <div class="col-lg-12 col-xl-4 col-sm-12 col-md-12">
@@ -101,7 +94,7 @@
                             <div class="card-footer">
                                 <div class="btn-list">
                                     <a href="{% url 'shop:shop' %}" class="btn btn-primary"><i class="fa fa-arrow-left me-1"></i>Продолжить покупки</a>
-                                    <a href="checkout.html" class="btn btn-success float-sm-end">Перейти к оплате<i class="fa fa-arrow-right ms-1"></i></a>
+                                    <a href="{% url 'cart:checkout' %}" class="btn btn-success float-sm-end">Перейти к оплате<i class="fa fa-arrow-right ms-1"></i></a>
                                 </div>
                             </div>
                         </div>
