--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -6,15 +6,15 @@
     <meta charset="UTF-8">
     <meta name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=0'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Sash – Bootstrap 5  Admin & Dashboard Template">
-    <meta name="author" content="Spruko Technologies Private Limited">
+    <meta name="description" content="psb-hosting.pro VDS/VPS Сервера для ваших бизнес решений">
+    <meta name="author" content="PSB Profession solutions business Technologies Private Limited">
     <meta name="keywords" content="admin,admin dashboard,admin panel,admin template,bootstrap,clean,dashboard,flat,jquery,modern,responsive,premium admin templates,responsive admin,ui,ui kit.">
 
     <!-- FAVICON -->
     <link rel="shortcut icon" type="image/x-icon" href="/static/assets/images/brand/favicon.ico" />
 
     <!-- TITLE -->
-    <title>Sash – Bootstrap 5 Admin & Dashboard Template</title>
+    <title>Psb-hosting.pro – Авторизация - Хостинг VDS/VPS серверов </title>
 
     <!-- BOOTSTRAP CSS -->
     <link id="style" href="/static/assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
@@ -55,7 +55,7 @@
             <!-- CONTAINER OPEN -->
             <div class="col col-login mx-auto mt-7">
                 <div class="text-center">
-                    <a href="{% url 'shop:index' %}"><img src="/static/assets/images/brand/logo-white.png" class="header-brand-img" alt=""></a>
+                    <a href="{% url 'shop:index' %}"><img src="/static/assets/images/logo.png" height="100" class="header-brand-img" alt=""></a>
                 </div>
             </div>
 
