add auth, register, reset password

--- a/app/templates/registration/password_reset_confirm.html
+++ b/app/templates/registration/password_reset_confirm.html
@@ -60,58 +60,54 @@
                 </div>
             </div>
             
-            {% if form.errors %}
                 <script type="text/javascript">
+                {% for field in form %}
+                {% for error in field.errors %}
                     function not5() {
                         notif({
                             type: "error",
-                            msg: "<b>Ошибка: </b>Неверная электронная почта, проверьте!",
+                            msg: "Ошибка: {{ error|escape }}",
                             position: "right",
                             opacity: 0.6
                         });
                     }
                     not5()
+              {% endfor %}
+              {% endfor %}
                 </script>
-            {% endif %}
+
             <!-- CONTAINER OPEN -->
             <div class="container-login100">
                 <div class="wrap-login100 p-6">
                     <form class="login100-form validate-form" method="post">
                         {% csrf_token %}
                         <span class="login100-form-title pb-5">
-                                Восстановление пароля
+                                Смена пароля
                             </span>
-                        <p class="text-muted">Введите электронную почту указанную вами при регистрации!</p>
-                        <div class="wrap-input100 validate-input input-group" data-bs-validate="Valid email is required: ex@abc.xyz">
-                            <a href="javascript:void(0)" class="input-group-text bg-white text-muted">
-                                <i class="zmdi zmdi-email" aria-hidden="true"></i>
-                            </a>
-                            <input class="input100 border-start-0 ms-0 form-control" name="email" type="email" placeholder="Электронная почта">
-                        </div>
+                        <p class="text-muted"></p>
+                      
+                          <label>Введите новый пароль</label>
+                            <div class="wrap-input100 validate-input input-group" id="Password-toggle">
+                              <a href="" class="input-group-text bg-white text-muted">
+                                <i class="zmdi zmdi-eye text-muted" aria-hidden="true"></i>
+                              </a>
+                              <input class="input100 border-start-0 form-control ms-0" type="password" placeholder="New Password" name="new_password1" autocomplete="new-password" required id="id_new_password1">
+                            </div>
+                            <label>Введите повторно новый пароль</label>
+                            <div class="wrap-input100 validate-input input-group" id="Password-toggle">
+                              <a href="" class="input-group-text bg-white text-muted">
+                                <i class="zmdi zmdi-eye text-muted" aria-hidden="true"></i>
+                              </a>
+                              <input class="input100 border-start-0 form-control ms-0" type="password" placeholder="New Password2" name="new_password2" autocomplete="new-password" required id="id_new_password2">
+                            </div>
+                              
                         <div class="submit">
                             <button class="btn btn-primary d-grid w-100" type="submit">Отправить</button>
                         </div>
                         <div class="text-center mt-4">
-                            <p class="text-dark mb-0">Вспомнили пароль?<a class="text-primary ms-1" href="{% url 'login' %}">Авторизация</a></p>
+                            <p class="text-dark mb-0"><a class="text-primary ms-1" href="/">Вернутся на главную</a></p>
                         </div>
-                        <label class="login-social-icon"><span>Или</span></label>
-                        <div class="d-flex justify-content-center">
-                            <a href="javascript:void(0)">
-                                <div class="social-login me-4 text-center">
-                                    <i class="fa fa-google"></i>
-                                </div>
-                            </a>
-                            <a href="javascript:void(0)">
-                                <div class="social-login me-4 text-center">
-                                    <i class="fa fa-facebook"></i>
-                                </div>
-                            </a>
-                            <a href="javascript:void(0)">
-                                <div class="social-login text-center">
-                                    <i class="fa fa-twitter"></i>
-                                </div>
-                            </a>
-                        </div>
+                  
                     </form>
                 </div>
             </div>
