--- a/app/templates/registration/register.html
+++ b/app/templates/registration/register.html
@@ -57,37 +57,50 @@
                 </div>
                 <div class="container-login100">
                     <div class="wrap-login100 p-6">
-                        <form class="login100-form validate-form">
+                        <form class="login100-form validate-form" method="post">
                             <span class="login100-form-title">
 									Registration
 								</span>
+								
+
+                        
+                            {% csrf_token %}
+                            {% for i in info_errors %}
+                            <h6>{{i}}</h6> 
+                            {% endfor %}
                             <div class="wrap-input100 validate-input input-group" data-bs-validate="Valid email is required: ex@abc.xyz">
                                 <a href="javascript:void(0)" class="input-group-text bg-white text-muted">
                                     <i class="mdi mdi-account" aria-hidden="true"></i>
                                 </a>
-                                <input class="input100 border-start-0 ms-0 form-control" type="text" placeholder="User name">
+                                <input class="input100 border-start-0 ms-0 form-control" type="text" placeholder="User name" name="username" maxlength="150" autocapitalize="none" autocomplete="username" autofocus required id="id_username">
                             </div>
-                            <div class="wrap-input100 validate-input input-group" data-bs-validate="Valid email is required: ex@abc.xyz">
+                            <div class="wrap-input100 validate-input input-group" data-bs-validate="Valid email is required: ex@abc.xyz" id="id_email">
                                 <a href="javascript:void(0)" class="input-group-text bg-white text-muted">
                                     <i class="zmdi zmdi-email" aria-hidden="true"></i>
                                 </a>
-                                <input class="input100 border-start-0 ms-0 form-control" type="email" placeholder="Email">
+                              
+                                <input class="input100 border-start-0 ms-0 form-control" type="email" placeholder="Email" name="email" maxlength="150" autocapitalize="none" autocomplete="email" autofocus required id="email">
                             </div>
                             <div class="wrap-input100 validate-input input-group" id="Password-toggle">
                                 <a href="javascript:void(0)" class="input-group-text bg-white text-muted">
                                     <i class="zmdi zmdi-eye" aria-hidden="true"></i>
                                 </a>
-                                <input class="input100 border-start-0 ms-0 form-control" type="password" placeholder="Password">
+                                <input class="input100 border-start-0 ms-0 form-control" type="password" placeholder="Password" name="password1" maxlength="150" autocapitalize="none" autocomplete="password1" autofocus required id="password1">
+                            </div>
+                            <div class="wrap-input100 validate-input input-group" id="Password-toggle">
+                                <a href="javascript:void(0)" class="input-group-text bg-white text-muted">
+                                    <i class="zmdi zmdi-eye" aria-hidden="true"></i>
+                                </a>
+                                <input class="input100 border-start-0 ms-0 form-control" type="password" placeholder="Password2" name="password2" maxlength="150" autocapitalize="none" autocomplete="password2" autofocus required id="password2">
                             </div>
                             <label class="custom-control custom-checkbox mt-4">
 									<input type="checkbox" class="custom-control-input">
 									<span class="custom-control-label">Agree the <a href="terms.html">terms and policy</a></span>
 								</label>
                             <div class="container-login100-form-btn">
-                                <a href="index.html" class="login100-form-btn btn-primary">
-										Register
-									</a>
+                                <input class="login100-form-btn btn-primary" type="submit" value="Register" formmethod="post">
                             </div>
+                                
                             <div class="text-center pt-3">
                                 <p class="text-dark mb-0">Already have account?<a href="login.html" class="text-primary ms-1">Sign In</a></p>
                             </div>
