--- a/app/templates/layout/index.html
+++ b/app/templates/layout/index.html
@@ -174,6 +174,9 @@
                                             <a class="dropdown-item" href="profile.html">
                                                 <i class="dropdown-icon fe fe-user"></i> Профиль
                                             </a>
+                                            <a class="dropdown-item" href="/accounts/password_change/">
+                                                <i class="dropdown-icon fe fe-user"></i> Смена пароля 
+                                            </a>
                                             <a class="dropdown-item" href="{% url 'logout' %}">
                                                 <i class="dropdown-icon fe fe-alert-circle"></i> Выйти
                                             </a>
