--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -110,7 +110,7 @@
                                             <button class="login100-form-btn btn-primary" type="submit">Вход</button>
                                         </div>
                                         <div class="text-center pt-3">
-                                            <p class="text-dark mb-0">Вы еще не с нами?<a href="#" class="text-primary ms-1">Зарегистрироваться</a></p>
+                                            <p class="text-dark mb-0">Вы еще не с нами?<a href="/register/" class="text-primary ms-1">Зарегистрироваться</a></p>
                                         </div>
                                         <label class="login-social-icon">
                                             <span>Вход через</span>
