--- a/app/templates/registration/password_reset_complete.html
+++ b/app/templates/registration/password_reset_complete.html
@@ -56,63 +56,17 @@
             <!-- CONTAINER OPEN -->
             <div class="col col-login mx-auto">
                 <div class="text-center">
-                    <a href="index.html"><img src="/static/assets/images/brand/logo-white.png" class="header-brand-img m-0" alt=""></a>
+                    <a href="{% url 'shop:index' %}"><img src="/static/assets/images/brand/logo-white.png" class="header-brand-img m-0" alt=""></a>
                 </div>
             </div>
-            
-            {% if form.errors %}
-                <script type="text/javascript">
-                    function not5() {
-                        notif({
-                            type: "error",
-                            msg: "<b>Ошибка: </b>Неверная электронная почта, проверьте!",
-                            position: "right",
-                            opacity: 0.6
-                        });
-                    }
-                    not5()
-                </script>
-            {% endif %}
             <!-- CONTAINER OPEN -->
             <div class="container-login100">
                 <div class="wrap-login100 p-6">
-                    <form class="login100-form validate-form" method="post">
-                        {% csrf_token %}
                         <span class="login100-form-title pb-5">
-                                Восстановление пароля
+                                Пароль успешно изменен
                             </span>
-                        <p class="text-muted">Введите электронную почту указанную вами при регистрации!</p>
-                        <div class="wrap-input100 validate-input input-group" data-bs-validate="Valid email is required: ex@abc.xyz">
-                            <a href="javascript:void(0)" class="input-group-text bg-white text-muted">
-                                <i class="zmdi zmdi-email" aria-hidden="true"></i>
-                            </a>
-                            <input class="input100 border-start-0 ms-0 form-control" name="email" type="email" placeholder="Электронная почта">
-                        </div>
-                        <div class="submit">
-                            <button class="btn btn-primary d-grid w-100" type="submit">Отправить</button>
-                        </div>
-                        <div class="text-center mt-4">
-                            <p class="text-dark mb-0">Вспомнили пароль?<a class="text-primary ms-1" href="{% url 'login' %}">Авторизация</a></p>
-                        </div>
-                        <label class="login-social-icon"><span>Или</span></label>
-                        <div class="d-flex justify-content-center">
-                            <a href="javascript:void(0)">
-                                <div class="social-login me-4 text-center">
-                                    <i class="fa fa-google"></i>
-                                </div>
-                            </a>
-                            <a href="javascript:void(0)">
-                                <div class="social-login me-4 text-center">
-                                    <i class="fa fa-facebook"></i>
-                                </div>
-                            </a>
-                            <a href="javascript:void(0)">
-                                <div class="social-login text-center">
-                                    <i class="fa fa-twitter"></i>
-                                </div>
-                            </a>
-                        </div>
-                    </form>
+                    <p>Ваш пароль был изменен.</p>
+                    <a class="btn bg-purple w-100" href="/">Вернуться на главную</a>
                 </div>
             </div>
         </div>
