add filter country

--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -112,6 +112,7 @@
                                         <div class="text-center pt-3">
                                             <p class="text-dark mb-0">Вы еще не с нами?<a href="/register/" class="text-primary ms-1">Зарегистрироваться</a></p>
                                         </div>
+                                        <!--
                                         <label class="login-social-icon">
                                             <span>Вход через</span>
                                         </label>
@@ -131,7 +132,7 @@
                                                     <i class="fa fa-twitter"></i>
                                                 </div>
                                             </a>
-                                        </div>
+                                        </div>-->
                                     </div>
                                 </div>
                             </div>
